pom xml updated for the correct javafx and jdk versions